RESOLVED FIXED57172
WKErrorCopyCFError() doesn't actually return a copy of the CFErrorRef
https://bugs.webkit.org/show_bug.cgi?id=57172
Summary WKErrorCopyCFError() doesn't actually return a copy of the CFErrorRef
Jeff Miller
Reported 2011-03-26 22:12:16 PDT
WKErrorCopyCFError() doesn't actually return a copy of the CFErrorRef
Attachments
Patch (1.18 KB, patch)
2011-03-26 22:13 PDT, Jeff Miller
sam: review+
Jeff Miller
Comment 1 2011-03-26 22:13:57 PDT
Jeff Miller
Comment 2 2011-03-26 22:19:30 PDT
Note You need to log in before you can comment on or make changes to this bug.