2011-03-26  Jeff Miller  <jeffm@apple.com>

Reviewed by Sam Weinig.

        WKErrorCopyCFError() doesn&apos;t actually return a copy of the CFErrorRef
        https://bugs.webkit.org/show_bug.cgi?id=57172

        * Shared/API/c/cf/WKErrorCF.cpp:
        (WKErrorCopyCFError): Use RetainPtr<> and leakRef() to return a real copy.


Canonical link: https://commits.webkit.org/71863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82058 268f45cc-cd09-0410-ab3c-d52691b4dbfc